css(page): fix overflow web page

--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1128,7 +1128,9 @@ hr {
 .public-DraftEditor-content {
    background-color:#FFF;
    border: 4px double gray;
+   overflow:scroll;
 }
+
 @media screen and (max-width: 1024px) {
 
     #eventDetailContent {
